[gd_scene load_steps=12 format=2]

[ext_resource path="res://Maps/Labrynna_Present/Zones/scripts/zone_9_8.gd" type="Script" id=1]
[ext_resource path="res://Maps/Labrynna_Present/Tiles/Tiles.tres" type="TileSet" id=2]
[ext_resource path="res://Teleport/Teleport.tscn" type="PackedScene" id=3]
[ext_resource path="res://Barrier/Barrier.tscn" type="PackedScene" id=4]
[ext_resource path="res://Maps/Labrynna_Present/CommonObjects/Sign/Sign.tscn" type="PackedScene" id=5]
[ext_resource path="res://Maps/Labrynna_Present/CommonObjects/Bush/Bush.tscn" type="PackedScene" id=6]
[ext_resource path="res://Maps/Labrynna_Present/CommonObjects/TriforceBlock/TrifoceBlock.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 48, 32 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 56, 4 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 4, 52 )

[node name="zone_9_8" type="Node2D"]

script = ExtResource( 1 )

[node name="Map" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 2
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 65536, 25, 0, 65537, 25, 0, 65538, 25, 0, 65539, 10, 0, 65540, 25, 0, 65541, 25, 0, 65542, 25, 0, 65543, 25, 0, 65544, 25, 0, 65545, 25, 0, 131072, 25, 0, 131073, 25, 0, 131074, 25, 0, 131075, 10, 0, 131076, 25, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 196608, 25, 0, 196609, 25, 0, 196610, 4, 0, 196611, 7, 0, 196612, 13, 0, 196613, 13, 0, 196614, 13, 0, 196615, 14, 0, 196616, 2, 0, 196617, 2, 0, 262144, 25, 0, 262145, 2, 0, 262146, 5, 0, 262147, 9, 0, 262148, 8, 0, 262149, 9, 0, 262150, 7, 0, 262151, 52, 0, 262152, 13, 0, 262153, 13, 0, 327680, 25, 0, 327681, 4, 0, 327682, 9, 0, 327683, 11, 0, 327684, 2, 0, 327685, 5, 0, 327686, 8, 0, 327687, 8, 0, 327688, 9, 0, 327689, 7, 0, 393216, 25, 0, 393217, 6, 0, 393218, 12, 0, 393219, 2, 0, 393220, 4, 0, 393221, 12, 0, 393222, 2, 0, 393223, 2, 0, 393224, 5, 0, 393225, 9, 0, 458752, 25, 0, 458753, 2, 0, 458754, 5, 0, 458755, 13, 0, 458756, 52, 0, 458757, 11, 0, 458758, 2, 0, 458759, 4, 0, 458760, 7, 0, 458761, 7, 0, 524288, 25, 0, 524289, 25, 0, 524290, 5, 0, 524291, 7, 0, 524292, 12, 0, 524293, 2, 0, 524294, 2, 0, 524295, 5, 0, 524296, 9, 0, 524297, 25, 0 )
_sections_unfolded = [ "Cell", "Collision" ]

[node name="Map2" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 2
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 0, 0, 5, 0, 0, 7, 0, 0, 9, 0, 0, 131071, 0, 0, 65538, 48, 0, 65540, 48, 0, 131072, 0, 0, 131074, 48, 0, 131076, 48, 0, 327679, 0, 0, 458751, 0, 0, 524288, 0, 0, 524297, 0, 0 )
_sections_unfolded = [ "Cell", "Collision" ]

[node name="Teleport" parent="." index="2" instance=ExtResource( 3 )]

up = true
down = true
left = false
right = true

[node name="EventTriggers" type="Node2D" parent="." index="3"]

[node name="ForcePush" type="Area2D" parent="EventTriggers" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 64
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EventTriggers/ForcePush" index="0"]

position = Vector2( 64, 80 )
shape = SubResource( 1 )

[node name="ChangeSong" type="Area2D" parent="EventTriggers" index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 64
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EventTriggers/ChangeSong" index="0"]

position = Vector2( 56, 12 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Front" type="Position2D" parent="EventTriggers" index="2"]

position = Vector2( 56, 72 )
_sections_unfolded = [ "Transform" ]

[node name="Barrier" parent="EventTriggers" index="3" instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EventTriggers/Barrier" index="0"]

position = Vector2( 88, 144 )
shape = SubResource( 3 )

[node name="Barrier2" parent="EventTriggers" index="4" instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EventTriggers/Barrier2" index="0"]

position = Vector2( 160, 80 )
shape = SubResource( 4 )

[node name="Objects" type="Node2D" parent="." index="4"]

[node name="Sign" parent="Objects" index="0" instance=ExtResource( 5 )]

position = Vector2( 88, 40 )

[node name="Bush" parent="Objects" index="1" instance=ExtResource( 6 )]

position = Vector2( 104, 40 )

[node name="Bush2" parent="Objects" index="2" instance=ExtResource( 6 )]

position = Vector2( 120, 40 )

[node name="TriforceBlock" parent="Objects" index="3" instance=ExtResource( 7 )]

position = Vector2( 40, 56 )


